fetched transactions in table-view component
