# src/app/app.component.ts
@@ -4,16 +4,24 @@ import {SideNavComponent} from './side-nav/side-nav.component';
 import { CommonModule } from '@angular/common';
 import { HomeComponent } from "./pages/home/home.component";
 import { StatementUploadDialogComponent } from "./pages/statement-upload-dialog/statement-upload-dialog.component";
+import { BankStatementPdfControllerService } from '../services/services';
+import { TransactionResponse } from '../services/models/transaction-response';
+import { TableViewComponent } from "./table-view/table-view.component";
 
 
 @Component({
   selector: 'app-root',
-  imports: [HeaderComponent, SideNavComponent, CommonModule, HomeComponent, StatementUploadDialogComponent],
+  imports: [HeaderComponent, SideNavComponent, CommonModule, HomeComponent, StatementUploadDialogComponent, TableViewComponent],
   templateUrl: './app.component.html',
   styleUrl: './app.component.scss'
 })
 export class AppComponent {
+
+  constructor(private bankService : BankStatementPdfControllerService){}
+
   isDialogOpen : boolean = false;
+
+  allTransactions : TransactionResponse[] = [];
 
   openDialog() {
     this.isDialogOpen = true;
@@ -23,8 +31,20 @@ export class AppComponent {
     this.isDialogOpen = false;
   }
 
-  handleFileUpload(event : File) {
-    console.log(event);
+  handleFileUpload(file : any) {
+
+
+    this.bankService.getAllPdfText({body:{document : file, fileType : 'TEXT'}})
+    .subscribe({
+      next : (value) => {
+        this.allTransactions = value;
+      },
+      error : (err) => {
+        console.log(err)
+      }
+    })
+
+    //console.log(event);
   }
 
   sideNavStatus: boolean = false;
