# src/services/models.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export { FileRequest } from './models/file-request';
+export { Transaction } from './models/transaction';
+export { TransactionCategoryRequest } from './models/transaction-category-request';
+export { TransactionResponse } from './models/transaction-response';
