# src/services/models/transaction-category-request.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface TransactionCategoryRequest {
+  category: string;
+  document: Blob;
+}
