# src/services/models/transaction.ts
@@ -1,0 +1,13 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface Transaction {
+  closingBalance?: string;
+  creditAmount?: number;
+  debitAmount?: number;
+  narration?: string;
+  refNumber?: string;
+  transactionDate?: string;
+  transactionType?: string;
+}
